# pidgin-plugins

./: ProjectHome.md
hide-inactive-buddies/: README
hide-inactive-buddies/src/: hide_away_patch.2.5.3.patch
jabber-settings/src/: jabber-settings.c
language-translator/conf/: hindi.trans  langtrans.conf  malayalam.trans  telugu.trans
language-translator/src/: language_translator.c
pidgin-hotkeys/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.status  configure.ac  hotkeys-config.h  tags
pidgin-hotkeys/po/: ChangeLog  Makefile  Makefile.in  de.po  fr.gmo  pidgin-hotkeys.pot  sv.gmo  sv.po  zh_TW.po
pidgin-hotkeys/src/: Makefile  Makefile.in  hotkeys.c  hotkeys.c~  hotkeys.h  hotkeys_win32.c  hotkeys_x11.c
pidgin-hotkeys/src/.deps/: hotkeys_x11.Plo
trunk/: README
trunk/hide-inactive-buddies/src/: hide_away_patch.2.5.5.patch  hide_inactive.c
trunk/jabber-settings/: README
trunk/language-translator/: KNOWN-ISSUES  README
trunk/language-translator/conf/: kannada.trans  tamil.trans
trunk/language-translator/src/: create_unicode_hash.sh  lang_trans_util.sh
trunk/pidgin-hotkeys/: @  README  configure  hotkeys-config.h.in  libtool  stamp-h1
trunk/pidgin-hotkeys/po/: POTFILES  POTFILES.in  de.gmo  fr.po  zh_TW.gmo
trunk/pidgin-hotkeys/src/: Makefile.am  hotkeys.h~
trunk/pidgin-hotkeys/src/.deps/: hotkeys.Plo
